# sst-core

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  BUGS  CMAKE_README.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  ISSUES  LICENSE  LICENSE.md  Makefile.am  PLATFORMS  PLATFORMS.md  README  README.md  RELEASE.md  VERSION  VERSION.md  acinclude.m4  action.cc  action.h  activity.h  archive.h  autogen.sh  bamboo.sh  bootshared.cc  componentInfo.h  config.cc  config.h  configGraph.cc  configGraph.h  configure.ac  elemLoader.cc  event.cc  event.h  exit.cc  (+35 more)
cmake_configure_files/: CMakeLists.txt  libcoreTestElement.la.in  sstsimulator.conf.in
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  sdl-format2.txt
doc/WorkingDrafts/: Components.xlsx  SST-ProjectPlan.doc
doc/figures/: StatsFlow.graffle
elements/DRAMSimC/: DRAMSimC.cpp  DRAMSimC.h  Makefile.am  configure.m4  dram.xml
elements/DRAMSimTrace/: DRAMSimTrace.cpp  DRAMSimTrace.h  Makefile.am  configure.m4
elements/SS_router/: Makefile.am  RtrIF.h  SS_network.cpp  SS_router.cc  SS_router.cpp  SS_router.h  SS_routerEvent.cpp  SS_router_test_sdlgen.c  libAlloc.cc
elements/cpu_PowerAndData/: .unignore  Makefile.am  configure.m4  cpu_PowerAndData.cc  cpu_PowerAndData.h
elements/cpu_power/: Makefile.am  configure.m4  cpu_power.cc  cpu_power.h
elements/genericProc/: Makefile.am  proc.cc  proc.h  procExport.cc
elements/mcniagara/: CycleTracker.cc  CycleTracker.h  Dependency.cc  Dependency.h  Makefile.am  McNiagara-mem.cc  McNiagara-sim.cc  McNiagara.cc  McNiagara.h  McSimDefs.h  MemoryModel.cc  MemoryModel.h  OffCpuIF.h  cpu.cc  cpu.h  cpuV1.cc  cpuV1.h  doxygen.cfg  makefile.standalone  mcniagara-xbar.xml  mcniagara2mem.xml  mersenne.h  sample_trace.txt
elements/mcopteron/: ConfigVars.cc  ConfigVars.h  FunctionalUnit.cc  FunctionalUnit.h  InstructionInfo.cc  InstructionInfo.h  InstructionQueue.cc  InstructionQueue.h  LoadStoreUnit.cc  LoadStoreUnit.h  Makefile.am  McOpteron.cc  McOpteron.h  MemoryModel.cc  MemoryModel.h  OpteronDefs.h  Random.cc  ReorderBuffer.cc  ReorderBuffer.h  Token.cc  Token.h  appconfig.ini  cpu.cc  cpu.h  cpuconfig.ini  hpccg-usedist.all  makefile.standalone  mcopteron2mem.xml  opteron-insn.txt  usedist.all
elements/portals4_sm/: Makefile.am  portals4_sm.cc  portals4_sm_sdlgen.c
elements/psst/: Makefile.am  README  eventqueue.cpp  eventqueue.h  psst.cpp  psst.h  queue.h  queue_test.cpp  vm-iface.h  vm.cpp  vm.h
elements/routermodel/: Makefile.am  routermodel.cc  routermodel.h
elements/trig_cpu/: Makefile.am  trig_cpu.cc  trig_cpu.h  trig_cpu_sdlgen.c
elements/trig_cpu_ev/: Makefile.am  algorithm.h  allreduce_narytree_trig.h  allreduce_recdbl_trig.h  allreduce_tree_trig.h  barrier_dissem.h  barrier_dissem_trig.h  barrier_recdbl_trig.h  barrier_tree.h  barrier_tree_trig.h  portals_types.h  stream_bw.h  test_mpi.h  trig_cpu.cc  trig_cpu_ev_sdlgen.c
elements/trig_nic/: .unignore  Makefile.am  libAlloc.cc  trig_nic.h
experimental/: .cmake-format.yaml  .gitlab-ci.yml  CMAKE_README.md  CMakeLists.txt
experimental/cmake/: PreventInSourceBuilds.cmake  sst.cmake  sst.cmake.back
experimental/cmake_configure_files/: CMakeLists.txt  SST_version.pc.in  build_info.h.in  sst_config.h.in  sstsimulator.conf.in
introspectors/introspector_cpuTemperature/: Makefile.am  introspector_cpuTemperature.cc  introspector_cpuTemperature.h
share/: CMakeLists.txt  Makefile.am  SSTConfig.cmake  SSTConfig.cmake.in  SSTConfigVersion.cmake.in
src/sst/: CMakeLists.txt  Makefile.am  sst.conf  sst.pc.in
sst/: Makefile  Makefile.am  Makefile.x86  mainpage.dox  sst.pc.in
sst/core/: Makefile.am  Makefile.inc  action.cc  action.h  activity.h  activityQueue.h  archive.cc  archive.h  boost.h  bootshared.cc  bootshared.h  bootsst.cc  bootsstinfo.cc  cache.h  clock.cc  clock.h  clockEvent.cc  clockEvent.h  clockHandler.h  compEvent.h  component.cc  component.h  componentInfo.h  config.cc  config.h  configGraph.cc  configGraph.h  cpunicEvent.cc  cpunicEvent.h  cputimer.cc  cputimer.h  debug.cc  debug.h  directLinkQueue.h  elemLoader.cc  elemLoader.h  element.h  event.cc  event.h  eventFunctor.h  (+87 more)
test/: CMakeLists.txt  Makefile.am  README.md  component.cc
test/config/: basic.py
tests/: CMakeLists.txt  Makefile.inc  cmd_DebugConsole_Checkpoint_serial0.cmd  cmd_DebugConsole_r2_rankserial0.cmd  cmd_DebugConsole_r2_rankserial1.cmd  cmd_DebugConsole_r4_rankserial0.cmd  cmd_DebugConsole_rankparallel0.cmd  cmd_DebugConsole_rankparallel1.cmd  cmd_DebugConsole_rankserial1.cmd  cmd_DebugConsole_serial0.cmd  cmd_DebugConsole_serial1.cmd  cmd_DebugConsole_thread0.cmd  cmd_DebugConsole_thread1.cmd  cmd_DebugConsole_tracebuf.cmd  test_Checkpoint.py  test_ClockerComponent.py  test_Clocks.py  test_Component.py  test_ComponentExtension.py  test_Component_createStats.py  test_Component_enableAllStats.py  test_Component_setStats.py  test_Component_time_overflow.py  test_DistribComponent_discrete.py  test_DistribComponent_expon.py  test_DistribComponent_gaussian.py  test_DistribComponent_poisson.py  test_Links.py  test_LookupTable.py  test_LookupTable2.py  test_MemPool_overflow.py  test_MemPool_undeleted_items.py  test_MessageGeneratorComponent.py  test_MessageMesh.py  test_Module.py  test_Output.py  test_OverheadMeasure.py  test_ParallelLoad.py  test_ParamComponent.py  test_PerfComponent.py  (+45 more)
tests/refFiles/: test_Checkpoint.out  test_Clocks_basic.out  test_ComponentExtension.out  test_Component_time_overflow.out  test_DebugConsole_Checkpoint_serial0.out  test_DebugConsole_Checkpoint_serial1.out  test_DebugConsole_Checkpoint_serial1_restart.out  test_DebugConsole_r2_rankserial0.out  test_DebugConsole_r2_rankserial1.out  test_DebugConsole_r4_rankserial0.out  test_DebugConsole_r4_rankserial1.out  test_DebugConsole_rankparallel0.out  test_DebugConsole_rankparallel1.out  test_DebugConsole_rankserial0.out  test_DebugConsole_serial0.out  test_DebugConsole_serial1.out  test_DebugConsole_thread0.out  test_DebugConsole_thread1.out  test_DebugConsole_tracebuf.out  (+48 more)
(+1475 files in other folders)
